# ydotool

./: CMakeLists.txt
Daemon/: CMakeLists.txt
